K8s/patient-service-svc.yaml

apiVersion: v1
kind: Service
metadata:
  name: patient-service
  namespace: microservices
spec:
  selector:
    app: patient-service
  ports:
    - port: 80
      targetPort: 8080
  type: ClusterIP
